[project]
name = "deconvolve-fft"
version = "0.1.0"
description = ""
authors = [
    {name = "Shixing Wang",email = "wangshixing@wustl.edu"}
]
readme = ""
requires-python = ">=3.13"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "deconvolve_fft"
